<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serving_turtle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rokey@todo.todo">rokey</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <launch_file>serv_localization.launch.py</launch_file>
    <launch_file>serv_nav2.launch.py</launch_file>
    <launch_file>serv_robot_state_publisher.launch.py</launch_file>
    <build_type>ament_python</build_type>
  </export>
</package>
